# nrgkick-api

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  create_release.sh  publish-lib.md  pyproject.toml  validate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
Documentation/: NRGkick Gen2 Local API Documentation.html
src/aionrgkick.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nrgkick_api/: __init__.py  api.py  const.py
src/nrgkick_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
