[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrgkick-api"
version = "1.0.0"
description = "Async Python client for NRGkick Gen2 EV charger local REST API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Andreas Jakl", email = "andreas.jakl@live.com"}
]
keywords = ["nrgkick", "ev", "charger", "home-assistant", "async", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "aresponses>=3.0.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "flake8>=7.3.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "pre-commit>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/andijakl/nrgkick-api"
Documentation = "https://github.com/andijakl/nrgkick-api#readme"
Repository = "https://github.com/andijakl/nrgkick-api"
Issues = "https://github.com/andijakl/nrgkick-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nrgkick_api = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/nrgkick_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
